--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,31 +2,25 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Zihao Zou
     - name: Date of Birth
-      value: 14th March 1879
+      value: 16th November, 1998
     - name: Languages
-      value: English, German
+      value: Chinese, English
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: MS in Computer Science
+      institution: Washington University in St. Louis
+      year: 2022
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+        - A member in Comptational Imaging Group(CIG).
+    - title: BS in Computer Engineering
+      institution: University of Caifornia, Irvine
+      year: 2020
       description:
-        - Description 1.
-        - Description 2.
+        - A member in HERE Lab.
 
 - title: Experience
   type: time_table
