--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,2 +1,6 @@
 github_repos:
-  - zihaozou/potential
+  - zihaozou/nerf_volume
+  - zihaozou/Delta
+  - zihaozou/Lenet-5
+  - zihaozou/my_yolov1
+  
