--- a/_config.yml
+++ b/_config.yml
@@ -191,8 +191,8 @@ display_tags: ["formatting", "images", "links", "math", "code"] # this tags will
 # -----------------------------------------------------------------------------
 
 scholar:
-  last_name: Einstein
-  first_name: [Albert, A.]
+  last_name: Zou
+  first_name: [Zihao]
 
   style: apa
   locale: en
