--- a/_config.yml
+++ b/_config.yml
@@ -67,7 +67,7 @@ github_username: zihaozou # your GitHub user name
 gitlab_username: # your GitLab user name
 twitter_username: # your Twitter handle
 linkedin_username: zihaozou # your LinkedIn user name
-scholar_userid: # your Google Scholar ID
+scholar_userid: g7UmvMEAAAAJ # your Google Scholar ID
 orcid_id: # your ORCID ID
 medium_username: # your Medium username
 quora_username: # your Quora username
